--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dependencies = [
   "tqdm",
 ]
 
+[project.scripts]
+clang-highlight = "clang_highlight.main:main"
+
 [tool.scikit-build]
 minimum-version = "build-system.requires"
 build-dir = "build/{wheel_tag}"
