.github: run tests

--- a/.github/workflows/python-build.yaml
+++ b/.github/workflows/python-build.yaml
@@ -17,3 +17,5 @@ jobs:
         env:
           LLVM_DIR: /opt/llvm
         run: "uv build"
+      - name: "Test"
+        run: "uvx --with dist/*.whl run python tests/tests.py"
