--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
-requires = ["scikit-build-core>=0.10"]
+requires = ["scikit-build-core>=0.10", "setuptools-scm"]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "clang-highlight"
-version = "0.1.0"
 authors = [
   {name = "Max Schwarz", email = "max.schwarz@online.de"},
 ]
@@ -30,7 +29,7 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.10",
 ]
-
+dynamic = ["version"]
 requires-python = ">=3.10"
 dependencies = [
   "dacite>=1.8.1",
@@ -45,6 +44,9 @@ clang-highlight = "clang_highlight.main:main"
 minimum-version = "build-system.requires"
 build-dir = "build/{wheel_tag}"
 wheel.py-api = "py3"
+metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
+
+[tool.setuptools_scm]  # Section required
 
 [dependency-groups]
 dev = [
