--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 
 [dependency-groups]
 dev = [
+    "docutils>=0.21.2",
+    "jinja2>=3.1.5",
     "pre-commit>=4.0.1",
     "ruff>=0.9.2",
 ]
