--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dev = [
     "docutils>=0.21.2",
     "jinja2>=3.1.5",
     "pre-commit>=4.0.1",
+    "pygments>=2.19.1",
     "ruff>=0.9.2",
 ]
 ide = [
