.github: only deploy to github pages on master

--- a/.github/workflows/python-build.yaml
+++ b/.github/workflows/python-build.yaml
@@ -31,6 +31,7 @@ jobs:
 
   # Deploy to GitHub pages
   deploy:
+    if: ${{ github.ref == 'refs/heads/master' }}
     needs: build
     environment:
       name: github-pages
